@@ -12,7 +12,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
 import java.util.List;
 
 
@@ -21,11 +20,6 @@ import com._pi.benepick.domain.members.dto.MembersResponse.*;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
-
-
-import java.util.List;
-import java.util.stream.Collectors;
-
 
 @Service
 @RequiredArgsConstructor
@@ -45,12 +39,10 @@ public class MembersQueryServiceImpl implements MembersQueryService {
     //복지 포인트 내역 조회
     @Override
     public PointHistListDTO getPointHist(Members member) {
-        Members members = membersRepository.findById(member.getId()).orElseThrow(() -> new ApiException(ErrorStatus._MEMBERS_NOT_FOUND));
-
         List<PointHists> pointHists = pointHistsRepository.findAllByMemberId(member.getId());
         List<PointHistDTO> pointHistDTOS=pointHists.stream()
                 .map(PointHistDTO::from)
-                .collect(Collectors.toList());
+                .toList();
         return PointHistListDTO.builder()
                 .pointHistDTOS(pointHistDTOS)
                 .build();
@@ -67,7 +59,7 @@ public class MembersQueryServiceImpl implements MembersQueryService {
         else {
             membersPage=membersRepository.findAll(pageRequest);
         }
-        List<MembersDetailResponseDTO> membersDetailResponseDTOList=membersPage.getContent().stream().map(MembersDetailResponseDTO::from).collect(Collectors.toList());
+        List<MembersDetailResponseDTO> membersDetailResponseDTOList=membersPage.getContent().stream().map(MembersDetailResponseDTO::from).toList();
 
         return MembersDetailListResponseDTO.builder()
                 .membersDetailResponseDTOList(membersDetailResponseDTOList)
@@ -75,4 +67,14 @@ public class MembersQueryServiceImpl implements MembersQueryService {
 
     }
 
+    @Override
+    public MemberPointDTO getMemberPoint(Members members){
+
+    Long point =  members.getPoint();
+
+        return MemberPointDTO.builder()
+                .point(point)
+                .id(members.getId())
+                .build();
+    }
 }
